# pytextrank

./: .bandit  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  README.rst  SECURITY.md  biblio.ttl  changelog.txt  code_of_conduct.md  compare.py  environment.yml  example.ipynb  example.py  explain.ipynb  explain_summ.ipynb  lgtm.yml  mkdocs.yml  pipe.py  pkg_doc.cfg  pkg_doc.py  pyfixdoc.py  pylintrc  pyproject.toml  requirements-dev.txt  requirements-viz.txt  requirements.txt  requirements_build.txt  run.sh  sample.py  scrub.py  setup.py  stage1.py  stage2.py  stage3.py  (+6 more)
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
archive/: pytextrank.py  test.py
dat/: ars.json  ars.txt  cfc.txt  gen.txt  lee.json  lee.txt  mih.txt  mihalcea.json  orm.json  saf.json  suz.json  suz.txt
deprecated/: WARNING.md  oldsrc.py
docs/: Makefile  ack.md  apidocs.yml  biblio.jinja  biblio.md  biblio.ttl  build.md  conf.py  depend.md  faq.md  glossary.jinja  glossary.md  index.md  index.rst  mkrefs.ttl  mkrefs.yml  overview.md  pytextrank.rst  ref.jinja  ref.md  setup.md  start.md  talks.md  todo.md  tutorial.md
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  pytextrank.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pytextrank.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  pytextrank.html
docs/_build/html/_modules/pytextrank/: pytextrank.html
docs/_build/html/_sources/: index.txt  modules.txt  pytextrank.txt
docs/javascripts/: config.js
docs/stylesheets/: extra.css
examples/: explain_algo.ipynb  explain_summ.ipynb  sample.ipynb
pytextrank/: __init__.py  base.py  biasedrank.py  positionrank.py  pytextrank.py  stop.txt  topicrank.py  util.py  version.py
tests/: conftest.py  test_base.py  test_biasedrank.py  test_positionrank.py  test_topicrank.py  trace.py
wip/: error.ipynb
wip/exmp_pip_tools/: PRE-COMMIT-CONFIG.yaml  README_EXAMPLE_PIP_TOOLS.md  check_diff_requirements.txt  check_diff_requirements_viz.txt  new_requirements-viz.txt  new_requirements.txt  pyproject.toml  requirements-viz.txt  requirements.in  requirements.txt  worked_example.md
wip/exmp_pip_tools/bkup/: requirements-viz.in  requirements.in  z_requirements-dev.in
